<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color" >

        <ImageView
            android:id="@+id/close_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="top|end"
            android:layout_margin="4dp"
            android:contentDescription="@string/closebutton"
            android:padding="5dp"
            android:src="@drawable/ic_cerrar" />

        <FrameLayout
            android:id="@+id/frameContainer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/close_activity" >

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="20dp" >

                <ImageView
                    android:id="@+id/imageVisit"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:background="@color/button_selectorcolor"
                    app:srcCompat="@drawable/ic_person_black_24dp"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/datosV"
                    android:textColor="@color/white_greyish"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/fullNameVisit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/fullName"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/white_greyish" />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/why"
                    android:textColor="@color/white_greyish"
                    android:textSize="25sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/fullNameHabit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/fullNameHabit"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/white_greyish" />



                <EditText
                    android:id="@+id/mobileNumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_phone_android_black_24dp"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/mobileNumber"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/white_greyish" />
                <EditText
                    android:id="@+id/calle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_streetview_black_24dp"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/calle"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/white_greyish" />

                <EditText
                    android:id="@+id/numero"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_location_city_black_24dp"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/num"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/white_greyish" />

                <Button
                    android:id="@+id/avisar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/loginbutton_selector"
                    android:padding="3dp"
                    android:text="@string/avisar"
                    android:textColor="@color/background_color"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </FrameLayout>
    </RelativeLayout>

</ScrollView>